--- a/my-aktion/src/main/webapp/listCampaigns.xhtml
+++ b/my-aktion/src/main/webapp/listCampaigns.xhtml
@@ -1,49 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	template="/WEB-INF/templates/default.xhtml">
-	<ui:define name="content">
-		<h1>#{msg['listCampaigns.my_campaigns']}</h1>
+<f:view contracts="#{view.locale.language}" xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:ui="http://java.sun.com/jsf/facelets"
+        xmlns:f="http://java.sun.com/jsf/core"
+        xmlns:h="http://java.sun.com/jsf/html">
+    <ui:composition template="/template.xhtml">
+        <ui:define name="content">
+            <h1>#{msg['listCampaigns.my_campaigns']}</h1>
 
-		<h:form>
-			<h:dataTable value="#{campaignListProducer.campaigns}" var="campaign">
-				<h:column>
-					<h:commandLink value="x"
-						actionListener="#{listCampaignsController.doDeleteCampaign(campaign)}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">#{msg['listCampaigns.name']}</f:facet>
-					<h:outputText value="#{campaign.name}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">#{msg['listCampaigns.target_amount']}</f:facet>
-					<h:outputText value="#{campaign.targetAmount}">
-						<f:convertNumber type="currency" currencyCode="EUR"/>
-					</h:outputText>
-				</h:column>
-				<h:column>
-					<f:facet name="header">#{msg['listCampaigns.donated_so_far']}</f:facet>
-					<h:outputText value="#{campaign.amountDonatedSoFar}">
-						<f:convertNumber type="currency" currencyCode="EUR"/>
-					</h:outputText>
-				</h:column>
-				<h:column>
-					<h:commandLink value="#{msg['listCampaigns.edit']}"
-						action="#{listCampaignsController.doEditCampaign(campaign)}" />
-				</h:column>
-				<h:column>
-					<h:commandLink value="#{msg['listCampaigns.list_donations']}"
-						action="#{listCampaignsController.doListDonations(campaign)}" />
-				</h:column>
-				<h:column>
-					<h:commandLink value="#{msg['listCampaigns.form']}"
-						action="#{listCampaignsController.doEditDonationForm(campaign)}" />
-				</h:column>
-			</h:dataTable>
-			<h:commandButton value="#{msg['listCampaigns.add_campaign']}"
-				action="#{listCampaignsController.doAddCampaign}" />
-		</h:form>
-	</ui:define>
-</ui:composition>
+            <h:form>
+                <h:dataTable value="#{campaignListProducer.campaigns}" var="campaign">
+                    <h:column>
+                        <h:commandLink value="x"
+                                       actionListener="#{listCampaignsController.doDeleteCampaign(campaign)}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">#{msg['listCampaigns.name']}</f:facet>
+                        <h:outputText value="#{campaign.name}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">#{msg['listCampaigns.target_amount']}</f:facet>
+                        <h:outputText value="#{campaign.targetAmount}">
+                            <f:convertNumber type="currency" currencyCode="EUR"/>
+                        </h:outputText>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">#{msg['listCampaigns.donated_so_far']}</f:facet>
+                        <h:outputText value="#{campaign.amountDonatedSoFar}">
+                            <f:convertNumber type="currency" currencyCode="EUR"/>
+                        </h:outputText>
+                    </h:column>
+                    <h:column>
+                        <h:commandLink value="#{msg['listCampaigns.edit']}"
+                                       action="#{listCampaignsController.doEditCampaign(campaign)}"/>
+                    </h:column>
+                    <h:column>
+                        <h:commandLink value="#{msg['listCampaigns.list_donations']}"
+                                       action="#{listCampaignsController.doListDonations(campaign)}"/>
+                    </h:column>
+                    <h:column>
+                        <h:commandLink value="#{msg['listCampaigns.form']}"
+                                       action="#{listCampaignsController.doEditDonationForm(campaign)}"/>
+                    </h:column>
+                </h:dataTable>
+                <h:commandButton value="#{msg['listCampaigns.add_campaign']}"
+                                 action="#{listCampaignsController.doAddCampaign}"/>
+            </h:form>
+        </ui:define>
+    </ui:composition>
+</f:view>
