--- a/my-aktion/src/main/webapp/contracts/en/template.xhtml
+++ b/my-aktion/src/main/webapp/contracts/en/template.xhtml
@@ -6,12 +6,12 @@
 <h:head>
 	<title>My-Aktion</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<h:outputStylesheet name="css/screen.css" />
+	<h:outputStylesheet name="/screen.css" />
 </h:head>
 <h:body>
 	<div id="container">
 		<div id="header">
-			<p>Beispielanwendung <b>My-Aktion</b> – Workshop Java EE 7</p>
+			<p>Example application <b>My-Aktion</b> – Workshop Java EE 7</p>
 		</div>
 		<div id="content">
 			<ui:insert name="content">
@@ -19,7 +19,7 @@
             </ui:insert>
 		</div>
 		<div id="footer">
-			<p> (C) 2013  dpunkt.verlag GmbH, MIT Lizenz</p>
+			<p> (C) 2013-2014  dpunkt.verlag GmbH, MIT license</p>
 		</div>
 	</div>
 </h:body>
