--- a/my-aktion/src/main/webapp/editCampaign.xhtml
+++ b/my-aktion/src/main/webapp/editCampaign.xhtml
@@ -1,77 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	template="/WEB-INF/templates/default.xhtml">
-	<ui:define name="content">
-		<h1>#{campaignProducer.addMode ? msg['editCampaign.add_new_campaign'] : msg['editCampaign.edit_campaign']}</h1>
+<f:view contracts="#{view.locale.language}" xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:ui="http://java.sun.com/jsf/facelets"
+        xmlns:f="http://java.sun.com/jsf/core"
+        xmlns:h="http://java.sun.com/jsf/html">
+    <ui:composition template="/template.xhtml">
+        <ui:define name="content">
+            <h1>#{campaignProducer.addMode ? msg['editCampaign.add_new_campaign'] : msg['editCampaign.edit_campaign']}</h1>
 
-		<h:form>
-			<h:panelGrid columns="3">
-				<f:facet name="header">#{msg['editCampaign.general']}</f:facet>
+            <h:form>
+                <h:panelGrid columns="3">
+                    <f:facet name="header">#{msg['editCampaign.general']}</f:facet>
 
-				<h:outputLabel value="#{msg['editCampaign.name']}:"></h:outputLabel>
-				<h:inputText id="a_name" value="#{campaignProducer.selectedCampaign.name}"
-					validatorMessage="#{msg['editCampaign.campaign_name_validation']}">
-					<f:passThroughAttribute name="placeholder" value="#{msg['editCampaign.name_of_the_campaign']}" />
-					<f:validateRequired />
-					<f:validateLength minimum="4" maximum="30" />
-				</h:inputText>
-				<h:message for="a_name" style="color: red;" />
+                    <h:outputLabel value="#{msg['editCampaign.name']}:"></h:outputLabel>
+                    <h:inputText id="a_name" value="#{campaignProducer.selectedCampaign.name}"
+                                 validatorMessage="#{msg['editCampaign.campaign_name_validation']}">
+                        <f:passThroughAttribute name="placeholder" value="#{msg['editCampaign.name_of_the_campaign']}"/>
+                        <f:validateRequired/>
+                        <f:validateLength minimum="4" maximum="30"/>
+                    </h:inputText>
+                    <h:message for="a_name" style="color: red;"/>
 
-				<h:outputLabel value="#{msg['editCampaign.target_amount']}:"></h:outputLabel>
-				<h:panelGroup>
-					<h:inputText id="a_spendenziel"
-						value="#{campaignProducer.selectedCampaign.targetAmount}"
-						validatorMessage="#{msg['editCampaign.target_amount_validation']}">
-						<f:convertNumber maxFractionDigits="2" minFractionDigits="2" />
-						<f:validateRequired />
-						<f:validateDoubleRange minimum="10.0" />
-					</h:inputText> EUR
-				</h:panelGroup>
-				<h:message for="a_spendenziel" style="color: red;" />
+                    <h:outputLabel value="#{msg['editCampaign.target_amount']}:"></h:outputLabel>
+                    <h:panelGroup>
+                        <h:inputText id="a_spendenziel"
+                                     value="#{campaignProducer.selectedCampaign.targetAmount}"
+                                     validatorMessage="#{msg['editCampaign.target_amount_validation']}">
+                            <f:convertNumber maxFractionDigits="2" minFractionDigits="2"/>
+                            <f:validateRequired/>
+                            <f:validateDoubleRange minimum="10.0"/>
+                        </h:inputText> EUR
+                    </h:panelGroup>
+                    <h:message for="a_spendenziel" style="color: red;"/>
 
-				<h:outputLabel value="#{msg['editCampaign.donation_amount']}:"></h:outputLabel>
-				<h:panelGroup>
-					<h:inputText id="a_spendenbetrag"
-						value="#{campaignProducer.selectedCampaign.donationMinimum}"
-						validatorMessage="#{msg['editCampaign.donation_amount_validation']}">
-						<f:convertNumber maxFractionDigits="2" minFractionDigits="2" />
-						<f:validateRequired />
-						<f:validateDoubleRange minimum="1.0" />
-					</h:inputText> EUR
-				</h:panelGroup>
-				<h:message for="a_spendenbetrag" style="color: red;" />
-			</h:panelGrid>
-			<h:panelGrid columns="3">
-				<f:facet name="header">#{msg['editCampaign.bank_account']}</f:facet>
+                    <h:outputLabel value="#{msg['editCampaign.donation_amount']}:"></h:outputLabel>
+                    <h:panelGroup>
+                        <h:inputText id="a_spendenbetrag"
+                                     value="#{campaignProducer.selectedCampaign.donationMinimum}"
+                                     validatorMessage="#{msg['editCampaign.donation_amount_validation']}">
+                            <f:convertNumber maxFractionDigits="2" minFractionDigits="2"/>
+                            <f:validateRequired/>
+                            <f:validateDoubleRange minimum="1.0"/>
+                        </h:inputText> EUR
+                    </h:panelGroup>
+                    <h:message for="a_spendenbetrag" style="color: red;"/>
+                </h:panelGrid>
+                <h:panelGrid columns="3">
+                    <f:facet name="header">#{msg['editCampaign.bank_account']}</f:facet>
 
-				<h:outputLabel value="#{msg['editCampaign.name']}:"></h:outputLabel>
-				<h:inputText id="b_name"
-					value="#{campaignProducer.selectedCampaign.account.name}">
-					<f:validateRequired />
-				</h:inputText>
-				<h:message for="b_name" style="color: red;" />
+                    <h:outputLabel value="#{msg['editCampaign.name']}:"></h:outputLabel>
+                    <h:inputText id="b_name"
+                                 value="#{campaignProducer.selectedCampaign.account.name}">
+                        <f:validateRequired/>
+                    </h:inputText>
+                    <h:message for="b_name" style="color: red;"/>
 
-				<h:outputLabel value="#{msg['editCampaign.iban']}:"></h:outputLabel>
-				<h:inputText id="b_konto"
-					value="#{campaignProducer.selectedCampaign.account.iban}">
-					<f:validateRequired />
-				</h:inputText>
-				<h:message for="b_konto" style="color: red;" />
+                    <h:outputLabel value="#{msg['editCampaign.iban']}:"></h:outputLabel>
+                    <h:inputText id="b_konto"
+                                 value="#{campaignProducer.selectedCampaign.account.iban}">
+                        <f:validateRequired/>
+                    </h:inputText>
+                    <h:message for="b_konto" style="color: red;"/>
 
-				<h:outputLabel value="#{msg['editCampaign.name_of_bank']}:"></h:outputLabel>
-				<h:inputText id="b_name_bank"
-					value="#{campaignProducer.selectedCampaign.account.nameOfBank}">
-					<f:validateRequired />
-				</h:inputText>
-				<h:message for="b_name_bank" style="color: red;" />
-			</h:panelGrid>
-			<h:commandButton value="#{msg['editCampaign.save']}"
-				action="#{editCampaignController.doSave}" />
-			<h:commandButton value="#{msg['editCampaign.cancel']}" immediate="true"
-				action="#{editCampaignController.doCancel}" />
-		</h:form>
-	</ui:define>
-</ui:composition>
+                    <h:outputLabel value="#{msg['editCampaign.name_of_bank']}:"></h:outputLabel>
+                    <h:inputText id="b_name_bank"
+                                 value="#{campaignProducer.selectedCampaign.account.nameOfBank}">
+                        <f:validateRequired/>
+                    </h:inputText>
+                    <h:message for="b_name_bank" style="color: red;"/>
+                </h:panelGrid>
+                <h:commandButton value="#{msg['editCampaign.save']}"
+                                 action="#{editCampaignController.doSave}"/>
+                <h:commandButton value="#{msg['editCampaign.cancel']}" immediate="true"
+                                 action="#{editCampaignController.doCancel}"/>
+            </h:form>
+        </ui:define>
+    </ui:composition>
+</f:view>
