--- a/my-aktion/src/main/webapp/editDonationForm.xhtml
+++ b/my-aktion/src/main/webapp/editDonationForm.xhtml
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
 <f:view contracts="#{view.locale.language}">
@@ -13,30 +14,25 @@
                 <h:panelGrid columns="2">
 
                     <h:outputLabel value="#{msg['editDonationForm.background_color']}:"></h:outputLabel>
-                    <h:selectOneMenu id="bgColor"
-                                     value="#{editDonationFormController.bgColor}">
-                        <f:selectItem itemLabel="#FFFFFF" itemValue="FFFFFF"/>
-                        <f:selectItem itemLabel="#000000" itemValue="000000"/>
-                        <f:selectItem itemLabel="#FF0000" itemValue="FF0000"/>
-                        <f:ajax render="url"/>
-                    </h:selectOneMenu>
+                    <p:colorPicker id="bgColor"
+                                   value="#{editDonationFormController.bgColor}"
+                                   widgetVar="bgPicker">
+                    </p:colorPicker>
 
                     <h:outputLabel value="#{msg['editDonationForm.text_color']}:"></h:outputLabel>
-                    <h:selectOneMenu id="textColor"
-                                     value="#{editDonationFormController.textColor}"
-                            >
-                        <f:selectItem itemLabel="#FFFFFF" itemValue="FFFFFF"/>
-                        <f:selectItem itemLabel="#000000" itemValue="000000"/>
-                        <f:selectItem itemLabel="#FF0000" itemValue="FF0000"/>
-                        <f:ajax render="url"/>
-                    </h:selectOneMenu>
+                    <p:colorPicker id="textColor"
+                                   value="#{editDonationFormController.textColor}"
+                                   widgetVar="textPicker">
+                    </p:colorPicker>
+
 
                     <h:outputLabel value="#{msg['editDonationForm.form_url']}:"></h:outputLabel>
-                    <h:inputTextarea id="url" rows="6" cols="30" readonly="true"
+                    <p:inputTextarea id="url" rows="6" cols="30" readonly="true"
                                      value="#{editDonationFormController.url}"/>
                 </h:panelGrid>
 
-                <h:commandButton value="OK" action="#{editDonationFormController.doOk}"/>
+                <p:commandButton value="Update URL" update="url" />
+                <p:commandButton value="OK" action="#{editDonationFormController.doOk}" ajax="false"/>
             </h:form>
         </ui:define>
     </ui:composition>
