--- a/my-aktion/src/main/webapp/editCampaign.xhtml
+++ b/my-aktion/src/main/webapp/editCampaign.xhtml
@@ -10,6 +10,7 @@
             <h1>#{campaignProducer.addMode ? msg['editCampaign.add_new_campaign'] : msg['editCampaign.edit_campaign']}</h1>
 
             <h:form>
+                <p:messages closable="true" />
                 <p:tabView id="tabView">
                     <p:tab title="#{msg['editCampaign.general']}">
 
