--- a/my-aktion/src/main/webapp/listCampaigns.xhtml
+++ b/my-aktion/src/main/webapp/listCampaigns.xhtml
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
 <f:view contracts="#{view.locale.language}">
@@ -9,42 +10,50 @@
             <h1>#{msg['listCampaigns.my_campaigns']}</h1>
 
             <h:form>
-                <h:dataTable value="#{campaignListProducer.campaigns}" var="campaign">
-                    <h:column>
-                        <h:commandLink value="x"
-                                       actionListener="#{listCampaignsController.doDeleteCampaign(campaign)}"/>
-                    </h:column>
-                    <h:column>
+                <p:dataTable value="#{campaignListProducer.campaigns}" var="campaign">
+                    <p:column>
+                        <p:commandButton onclick="confirmation.show()"
+                                         actionListener="#{listCampaignsController.doDeleteCampaign(campaign)}"
+                                         icon="ui-icon-close"/>
+                    </p:column>
+                    <p:column>
                         <f:facet name="header">#{msg['listCampaigns.name']}</f:facet>
                         <h:outputText value="#{campaign.name}"/>
-                    </h:column>
-                    <h:column>
+                    </p:column>
+                    <p:column>
                         <f:facet name="header">#{msg['listCampaigns.target_amount']}</f:facet>
                         <h:outputText value="#{campaign.targetAmount}">
                             <f:convertNumber type="currency" currencyCode="EUR"/>
                         </h:outputText>
-                    </h:column>
-                    <h:column>
+                    </p:column>
+                    <p:column>
                         <f:facet name="header">#{msg['listCampaigns.donated_so_far']}</f:facet>
                         <h:outputText value="#{campaign.amountDonatedSoFar}">
                             <f:convertNumber type="currency" currencyCode="EUR"/>
                         </h:outputText>
-                    </h:column>
-                    <h:column>
-                        <h:commandLink value="#{msg['listCampaigns.edit']}"
+                    </p:column>
+                    <p:column>
+                        <p:commandLink value="#{msg['listCampaigns.edit']}" ajax="false"
                                        action="#{listCampaignsController.doEditCampaign(campaign)}"/>
-                    </h:column>
-                    <h:column>
-                        <h:commandLink value="#{msg['listCampaigns.list_donations']}"
+                    </p:column>
+                    <p:column>
+                        <p:commandLink value="#{msg['listCampaigns.list_donations']}" ajax="false"
                                        action="#{listCampaignsController.doListDonations(campaign)}"/>
-                    </h:column>
-                    <h:column>
-                        <h:commandLink value="#{msg['listCampaigns.form']}"
+                    </p:column>
+                    <p:column>
+                        <p:commandLink value="#{msg['listCampaigns.form']}" ajax="false"
                                        action="#{listCampaignsController.doEditDonationForm(campaign)}"/>
-                    </h:column>
-                </h:dataTable>
-                <h:commandButton value="#{msg['listCampaigns.add_campaign']}"
+                    </p:column>
+                </p:dataTable>
+                <p:commandButton value="#{msg['listCampaigns.add_campaign']}"
                                  action="#{listCampaignsController.doAddCampaign}"/>
+                <p:confirmDialog message="#{msg['listCampaigns.ask_delete_campaign']}"
+                                 header="#{msg['listCampaigns.delete_campaign']}" severity="alert"
+                                 widgetVar="confirmation">
+                    <p:commandButton value="#{msg['listCampaigns.yes']}" onclick="confirmation.hide()"
+                                     actionListener="#{listCampaignsController.commitDeleteCampaign}"/>
+                    <p:commandButton value="#{msg['listCampaigns.no']}" onclick="confirmation.hide()"/>
+                </p:confirmDialog>
             </h:form>
         </ui:define>
     </ui:composition>
